--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,6 @@
 # This file lists all individuals having contributed content to the repository.
 
 Dawit Alemu <dawit.amel@gmail.com.com>
-Yonas Getahun <yochan2520@gmail.com>
+Abdulmalik Mohamed <abdprin@gmail.com>
+Yonas Getahun <yonchan2520@gmail.com>
+
